welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:2: error: not found: value ||
		if ( (a % 10) == (b % 10 ) || (b % 10) == (c % 10 )) || (a % 10) == (c % 10 ){
                                                                     ^